Defined todoForm component

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,6 +8,8 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   </head>
   <body>
+    <container id="todo-form-container">
+    </container>
     <script src="main.js"></script>
   </body>
 </html>
